--- a/dsl/qywx_notice_1_0_0.yml
+++ b/dsl/qywx_notice_1_0_0.yml
@@ -4,7 +4,7 @@ inputParameters:
   - name: 企业微信机器人webhook地址
     ref: bot_webhook_url
     type: SECRET
-    value: ((charbot.webhook))
+    value: ((chatbot.webhook))
   - name: 消息类型
     ref: msgtype
     type: STRING
