--- a/dsl/qywx_notice.yml
+++ b/dsl/qywx_notice.yml
@@ -1,5 +1,5 @@
 ref: qywx_notice
-version: 1.0.0
+version: 1.1.0
 inputParameters:
   - name: 企业微信机器人webhook地址
     ref: bot_webhook_url
@@ -16,10 +16,10 @@ inputParameters:
   - name: 提醒列表，userid，若填写，将会@指定用户，@all表示提醒所有人
     ref: mentioned_list
     type: STRING
-    value: "[]"
+    value: '[]'
   - name: 提醒列表，手机号，若填写，将会@手机号对应的用户，@all表示提醒所有人
-    ref: mentioned_moblie_list
+    ref: mentioned_mobile_list
     type: STRING
-    value: "[]"
+    value: '[]'
 spec:
-  image: 'jianmudev/jianmu-runner-qywx-notice:1.0.0'
+  image: 'jianmudev/jianmu-runner-qywx-notice:1.1.0'
