--- a/dsl/qywx_notice.yml
+++ b/dsl/qywx_notice.yml
@@ -1,10 +1,10 @@
 ref: qywx_notice
-version: 1.2.0
+version: 1.3.0
 inputParameters:
   - name: 企业微信机器人webhook地址
     ref: bot_webhook_url
     type: SECRET
-    value: ((chatbot.webhook))
+    required: true
   - name: 消息类型
     ref: msgtype
     type: STRING
@@ -50,4 +50,4 @@ inputParameters:
     type: STRING
     value: ""
 spec:
-  image: 'jianmudev/jianmu-runner-qywx-notice:1.2.0'
+  image: 'jianmudev/jianmu-runner-qywx-notice:1.3.0'
