--- a/dockerfile/Dockerfile_qywx_markdown
+++ b/dockerfile/Dockerfile_qywx_markdown
@@ -1,5 +1,5 @@
 FROM curlimages/curl:7.77.0
 
-ADD script/* /usr/local/bin/
+ADD script/send_markdown /usr/local/bin/send
 
 ENTRYPOINT ["/usr/local/bin/send"]
