合并镜像，只在节点层面分离

--- a/dsl/qywx_notice_markdown.yml
+++ b/dsl/qywx_notice_markdown.yml
@@ -10,4 +10,6 @@ inputParameters:
     type: STRING
     required: true
 spec:
-  image: 'jianmudev/jianmu-runner-qywx-notice:1.2.0-markdown'
+  image: 'jianmudev/jianmu-runner-qywx-notice:1.2.0'
+  entrypoint:
+  - '/usr/local/bin/send_markdown'
