--- a/dsl/qywx_notice_text.yml
+++ b/dsl/qywx_notice_text.yml
@@ -18,4 +18,6 @@ inputParameters:
     type: STRING
     value: '[]'
 spec:
-  image: 'jianmudev/jianmu-runner-qywx-notice:1.2.0-text'
+  image: 'jianmudev/jianmu-runner-qywx-notice:1.2.0'
+  entrypoint: 
+  - '/usr/local/bin/send_text'
