--- a/dsl/qywx_notice_image.yml
+++ b/dsl/qywx_notice_image.yml
@@ -14,4 +14,6 @@ inputParameters:
     type: STRING
     required: true
 spec:
-  image: 'jianmudev/jianmu-runner-qywx-notice:1.2.0-image'
+  image: 'jianmudev/jianmu-runner-qywx-notice:1.2.0'
+  entrypoint: 
+  - '/usr/local/bin/send_image'
